--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "boilerplate-card",
+  "name": "remote-card",
   "version": "1.4.1",
-  "description": "Lovelace boilerplate-card",
+  "description": "Lovelace remote-card",
   "keywords": [
     "home-assistant",
     "homeassistant",
@@ -10,9 +10,9 @@
     "lovelace",
     "custom-cards"
   ],
-  "module": "boilerplate-card.js",
-  "repository": "git@github.com:custom_cards/boilerplate-card.git",
-  "author": "Ian Richardson <iantrich@gmail.com>",
+  "module": "remote-card.js",
+  "repository": "git@github.com:zroger49/broadllink-card",
+  "author": "zroger49 <zroger49@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "custom-card-helpers": "^1.7.2",
