rework tv remote and warning

--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "license": "MIT",
   "dependencies": {
     "custom-card-helpers": "^1.7.2",
-    "home-assistant-js-websocket": "^5.11.1",
-    "lit": "^2.0.0-rc.2",
-    "@material/mwc-ripple": "^0.19.1"
+    "home-assistant-js-websocket": "^6.0.1",
+    "lit": "^2.1.2",
+    "@material/mwc-ripple": "0.25.3"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
